--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -6,8 +6,14 @@
 </head>
 <body>
     <h1>Your To-do List</h1>
-    <input id="id_new_item" placeholder="Enter a To-do item"/>
+    <form method="POST">
+        <input name="item_text" id="id_new_item" placeholder="Enter a To-do item" />
+        {% csrf_token %}
+    </form>
     <table id="id_list_table">
+        {% for item in items %}
+        <tr><td>{{ forloop.counter }}: {{ item.text }}</td></tr>
+    {% endfor %}
     </table>
 
 </body>
