Feat: Chapter 7 TDD
Committing changes from Chapter 7 Testing Goats for TDD training
2nd commit of Chapter 7

[ICTRAINING-1474]

--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -5,8 +5,8 @@
     <title>To-do lists</title>
 </head>
 <body>
-    <h1>Start a new To-do List</h1>
-    <form method="POST">
+    <h1>Your To-do List</h1>
+    <form method="POST" action="/">
         <input name="item_text" id="id_new_item" placeholder="Enter a To-do item" />
         {% csrf_token %}
     </form>
