--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Start a new To-do List</h1>
-    <form method="POST">
+    <form method="POST" action="/lists/new">
         <input name="item_text" id="id_new_item" placeholder="Enter a To-do item" />
         {% csrf_token %}
     </form>
