--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Your To-do List</h1>
-    <form method="POST" action="/">
+    <form method="POST" action="/lists/new">
         <input name="item_text" id="id_new_item" placeholder="Enter a To-do item" />
         {% csrf_token %}
     </form>
