--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -6,14 +6,14 @@
 </head>
 <body>
     <h1>Your To-do List</h1>
-    <form method="POST" action="/lists/new">
+    <form method="POST" action="/lists/{{ list.id }}/add_item">
         <input name="item_text" id="id_new_item" placeholder="Enter a To-do item" />
         {% csrf_token %}
     </form>
     <table id="id_list_table">
-        {% for item in items %}
-        <tr><td>{{ forloop.counter }}: {{ item.text }}</td></tr>
-    {% endfor %}
+        {% for item in list.item_set.all %}
+            <tr><td>{{ forloop.counter }}: {{ item.text }}</td></tr>
+        {% endfor %}
     </table>
 
 </body>
